--- a/views/processor.html
+++ b/views/processor.html
@@ -38,7 +38,7 @@
             </form>
         </div>
     </div>
-    <script src="../assets/functions/processor.js"></script>
+    <!-- <script src="../build/assets/functions/processor.js"></script> -->
     <script src="../assets/Bootstrap/bootstrap.bundle.js"></script>
 </body>
 
