--- a/views/processor.html
+++ b/views/processor.html
@@ -38,6 +38,9 @@
             </form>
         </div>
     </div>
+    <script>
+        var exports = {};
+    </script>
     <script src="../assets/Bootstrap/bootstrap.bundle.js" type="module"></script>
     <script src="../build/assets/functions/processor.js"></script>
 </body>
