--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
     color: wheat;
 }
 
-.card button {
+.card a {
     background-color: wheat;
     font-weight: bold;
     position: relative;
@@ -35,22 +35,28 @@ body {
     font-size: 16px;
     border: none;
     transition: 0.5s;
-    cursor: pointer;
+    cursor: pointer; 
+    text-decoration: none;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: brown;
 }
-.card button:hover{
+.card a:hover{
     transform: translate(15px ,-15px);
     box-shadow: -50px 50px 50px rgba(0, 0, 0, 0.5);
 }
 
-.card button::after,
-.card button::before {
+.card a::after,
+.card a::before {
     content: '';
     position: absolute;
     background-color: rgb(198, 160, 88);
     transition: 0.5s;
 }
 
-.card button::before {
+.card a::before {
     width: 15px;
     height: 100%;
     top: 7.5px;
@@ -58,23 +64,13 @@ body {
     transform: skewY(-45deg);
 }
 
-.card button::after {
+.card a::after {
     width: 100%;
     height: 15px;
     left: -7.5px;
     bottom: -15px;
     transform: skewX(-45deg);
 }
-
-/* .card button:hover::before {
-    left: 0;
-}
-
-.card button:hover::after {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-} */
 
 @keyframes AnimationName {
     0% {
