--- a/views/index.html
+++ b/views/index.html
@@ -13,9 +13,8 @@
     <div class="card centerElements">
         <h1>Welcome to image proccessing API Project</h1>
         <h2>Developed by: Nader Sayed</h2>
-        <form action="/api">
-            <button type="submit">Redirect To Image Processor</button>
-        </form>
+        <a href="/api">Redirect To Image Processor</a>
+        <a href="/gallery" type="button">Gallery</a>
 
     </div>
 </body>
