--- a/views/processor.html
+++ b/views/processor.html
@@ -36,6 +36,7 @@
                 </div>
                 <button type="submit" class="btn btn-danger w-100 my-3" id="resizingBtn">Resize</button>
             </form>
+            <a href="/" class="btn btn-info w-100">Back</a>
         </div>
     </div>
     <script>
